# ravensky-astro/Cargo.toml
[workspace]
resolver = "2"
members = [
    "astro-io",
    "astro-metadata",
    "astro-metrics",
]

[workspace.package]
version = "0.4.0"
authors = ["Dean Ostergaard <dean@deanostergaard.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dostergaard/ravensky-astro"
homepage = "https://github.com/dostergaard/ravensky-astro"
documentation = "https://docs.rs/ravensky-astro"
rust-version = "1.94"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.4"
log = "0.4"
fitsio = { version = "0.21.2", features = ["fitsio-src"] }
quick-xml = "0.30"
byteorder = "1.5"
flate2 = "1.0"
ndarray = "0.15"
rayon = "1.11"
serde_json = "1.0"
sep-sys = "1.3.0"
walkdir = "2.5"

astro-io = { path = "./astro-io", version = "0.4.0" }
astro-metadata = { path = "./astro-metadata", version = "0.4.0" }
astro-metrics = { path = "./astro-metrics", version = "0.4.0" }

[package]
name = "ravensky-astro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Core libraries for astronomical image file analysis and manipulation."
documentation = "https://docs.rs/ravensky-astro"
readme = "README.md"

[lib]
name = "ravensky_astro"

[dependencies]
anyhow.workspace = true
astro-io.workspace = true
astro-metadata.workspace = true
astro-metrics.workspace = true
chrono.workspace = true
csv.workspace = true
rayon.workspace = true
serde_json.workspace = true
walkdir.workspace = true

[[example]]
name = "dump_fits_metadata"
path = "examples/dump_fits_metadata.rs"

[[example]]
name = "dump_xisf_metadata"
path = "examples/dump_xisf_metadata.rs"

[[example]]
name = "metadata_stats"
path = "examples/metadata_stats.rs"
