[package]
name = "astro-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "I/O operations for astronomical image formats"
documentation = "https://docs.rs/astro-io"
readme = "README.md"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
fitsio.workspace = true
quick-xml.workspace = true
serde.workspace = true
log.workspace = true
byteorder.workspace = true
flate2.workspace = true
